Updated index.html to change the message

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,6 +6,6 @@
   <title>Welcome to OpenShift Test Lab</title>
 </head>
 <body>
-<h1>Hello, OpenShift.</h1>
+<h1>Hello, OpenShift Test Lab.</h1>
 </body>
 </html>
